# sprut

./: .gitignore  CHANGELOG.md  LICENSE.txt  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose-mongodb.yaml
sprut/: exceptions.py
sprut/database/: connection.py  database.py  models.py
sprut/models/: __init__.py  base.py  device.py
sprut/settings/: __init__.py  base.py  database.py
tests/: conftest.py  test_mongodb_settings.py  test_sprut.py
tests/database/: test_connection.py  test_database.py  test_devices.py  test_models.py
tests/models/: test_device.py
tests/settings/: conftest.py  test_mongodb_settings.py
