[tool.poetry]
name = "sprut"
version = "0.1.0"
description = ""
authors = ["Fedor Suchkov <f.suchkov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = {version = "^0.6", extras = ["all"]}

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
